--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.8",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
