--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^11.0.2",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
